- Perform periodical balancing of CPU-bound threads, which tends to   never sleep.  Should fix PR/37245 by <yamt>. - Fix a regression - dissalow catching of bound threads.  Also, allow   migration of non-bound kthreads, this restriction seems pointless. - Few micro-optimisations, misc.